# PCD_Python

./: README.md  functions.py  import packages.py  requirements.txt
function/: notes for each function.md
function/pspspline-changepoint/: pyproject.toml  test.ipynb
function/pspspline-changepoint/src/pspline_changepoint/: __init__.py  core.py  plot.py
