[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pspline-changepoint"
version = "0.1.0"
description = "Penalized-spline change-point detection (pyGAM) with likelihood-based tau selection."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
keywords = ["change-point", "GAM", "pyGAM", "splines", "statistics"]
dependencies = [
  "numpy>=1.22",
  "pygam>=0.9.0",
  "scipy>=1.9",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pspline_changepoint = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
